# novelscript-engine

./: .gitignore  README.md  TECH_PLAN.md  pyproject.toml
configs/: app.json
docs/: PRD.md  cost_model.md  小说剧本精编编剧工作流程设计v2.md  网文精编总流程设计 v3.md
index/: must_keep_scenes.schema.json
prompts/: QUALITY_BAR.md
prompts/p0_preference/: v1.md
prompts/p1_source_cards/: v1.md
prompts/p3_strategy/: v1.md
prompts/s0_engine/: v1.md
prompts/s1_bible/: v1.md
prompts/s1_premise/: v1.md
prompts/s2_season_map/: v1.md
prompts/s3_episodes/: v1.md
prompts/s4_beats/: v1.md
prompts/s5_script/: v1.md
prompts/stage0_upstream/: brief.md  characters.md  outline.md
schemas/: museframe_scene.v1.json  script.schema.v1.json
schemas/fixtures/: ep01.script.json
src/novelscript/: __init__.py  cli.py  config.py  logging.py  progress.py
tests/: test_chapter_source.py  test_checkers.py  test_cli.py  test_config.py  test_cross_stage.py  test_dialogue_checker.py  test_episode_refinement.py  test_fidelity.py  test_index.py  test_llm_client_retry.py  test_must_keep.py  test_must_keep_from_cards.py  test_p0_fixes.py  test_pilot_batch.py  test_pipeline.py  test_pipeline_cancel.py  test_pre_pipeline.py  test_quality.py  test_quality_assurance.py  test_s4.py  test_s5.py  test_season_plan.py  test_source_context.py  test_stage0_import.py  test_stage0_upstream.py  test_stage_deps.py  test_web_delete_project.py  test_web_manifest.py  test_web_stage_rerun.py
web/: create.html  create.js  home.js  index.html  project.html  project.js  serve.ps1  server.py  styles.css
(+39 files in other folders)
