[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "novelscript-engine"
version = "0.1.0"
description = "NovelScript Engine — 小说精编 → AI 漫剧剧本引擎"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "jsonschema>=4.20",
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
    "requests>=2.31",
    "openai>=1.50",
    "google-genai>=1.58",
    "boto3>=1.34",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
]

[project.scripts]
novelscript = "novelscript.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "integration: tests that call external LLM APIs",
]
